--- a/waveshare.yaml
+++ b/waveshare.yaml
@@ -19,7 +19,6 @@ substitutions:
   # for Greek use "Noto Sans" for other languages use a compatible font family
   font_family: Figtree  
 
-  frigate: "http://192.168.1.38:8123/local/snapshots/last_snapshot.jpg"
   #frigate1: rtsp://Tapoone:Tapoone132@192.168.1.56:554/stream1
  
   media_player_entity: "media_player.waveshare_esp32_p4_media_player"
@@ -175,11 +174,10 @@ online_image:
 # Enable Home Assistant API
 api:
   encryption:
-    key: "dkQIr4kVvP+E4XffuF9vSL5qQopmfgW6voYVkciZ3V8="
+
 
 ota:
-  - platform: esphome
-    password: "490f749427bef8df98be01b4895c7058"
+
 
 wifi:
   ssid: !secret wifi_ssid
@@ -188,8 +186,6 @@ wifi:
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Waveshare Fallback Hotspot"
-    password: "ONf0EKacM29P"
 
 captive_portal:
 
@@ -286,8 +282,7 @@ esp_cam_sensor:
 
 network_camera:
   - id: security_cam_1
-    url: "http://192.168.1.38:1984/api/stream.mjpeg?src=frigate1_esp32" #"http://192.168.1.38:1984/api/stream.mjpeg?src=frigate1_esp32"  #""rtsp://192.168.1.38:8554/frigate1_esp32_h264""
-    protocol: mjpeg
+    url: 
     width: 640
     height: 480
     canvas_id: security_canvas
@@ -522,8 +517,8 @@ external_components:
 
   - source:
       type: git
-      url: https://github.com/youkorr/test2_esp_video_esphome
-      ref: claude/fix-lvgl-esphome-boot-gbLwE #claude/fix-sc202cs-bayer-format-jJtiS #claude/fix-esp32-detection-issues-4AJoe #claude/ov02c10-ipa-check-OHTeT #claude/remove-camera-warnings-7bhNh #claude/optimize-video-player-buffer-8BkwL
+      url: hhttps://github.com/youkorr/lvgl_9.4
+      ref: main #claude/fix-sc202cs-bayer-format-jJtiS #claude/fix-esp32-detection-issues-4AJoe #claude/ov02c10-ipa-check-OHTeT #claude/remove-camera-warnings-7bhNh #claude/optimize-video-player-buffer-8BkwL
     components: [esp_cam_sensor, esp_video, lvgl_camera_display, sd_mmc_card, webdavbox3, storage, simple_video_player, face_detection, network_camera, lvgl, font, image]
     refresh: always
 
